--- a/css/tetris.css
+++ b/css/tetris.css
@@ -1,22 +1,35 @@
 @charset "utf-8";
 
+
 * {
   font-family: Tahoma, sans-serif;
 }
+
 
 body {
   background-color: #505060;
 }
 
+
 canvas {
-  display: block;
-  width: 640px;
-  height: 600px;
   padding: 0;
-  margin: 16px auto;
+  margin: 0;
+  width: 800px;
+  height: 800px;
 }
 
 
 .main {
-  
+  width: 800px;
+  height: 800px;
+  padding: 0;
+  margin: 16px auto;
+  display: block;
+}
+
+
+#stats {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
